--- a/TO-prosjekt/frontend/css-plan2/spørsmålet.html
+++ b/TO-prosjekt/frontend/css-plan2/spørsmålet.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="debug.css">
     <title>titlela di da</title>
 </head>
 <body>
@@ -15,7 +14,7 @@
             <div class="statement">noe noe noe</div>
             <div class="img" style="background-image: url(../img/webp-512.webp);"><div class="imgsrc">Kjilde: mora di</div></div>
         </div><!-- 1/2 1 = hovedside, katgori velging, spillsiden 2 = spørsmålet, sanheten -->
-        <div class="low"></div><!-- kun aktiv når på spørsmålet, sanheten sidende -->
+        <div class="low"><div class="btntru">sant</div><div class="btnfal">usant</div></div><!-- kun aktiv når på spørsmålet, sanheten sidende -->
         <div class="bottom"> api response: %tid% page build: %tid2%</div>
         <!-- back to good ol html -->
     </div>
